Minor optical update

--- a/example.html
+++ b/example.html
@@ -13,7 +13,12 @@
 				onBoxReady: (box)=>console.log(box)
 			});
 		</script>
-		<style>body{margin:0px;}</style>
+		<style>
+			body{
+				margin:0px; 
+				font-family: Verdana, Geneva, Tahoma, sans-serif;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>German Calendar</h1>
