Rewrote the onBoxReady code so the function now doesn't have to be given in the config. (Now it's a function that has to be written by the user.)

--- a/example.html
+++ b/example.html
@@ -10,10 +10,12 @@
 				days: ["Montag", "Dienstag", "Mittwoch", "Donnerstag", "Freitag", "Samstag", "Sonntag"],
 				firstDayOfWeekOffset:6,
 				stylesheet:"./calendar.css",
-				showWeekdays: false,
-				onBoxReady: (box)=>{box.querySelector(".event").innerText="Hallo";
-				box.addEventListener("click", (e)=>console.log(e.target));}
+				showWeekdays: false
 			});
+			function onBoxReady(box){
+				box.querySelector(".event").innerText="Hello. This is some example text.";
+				box.addEventListener("click", (e)=>console.log(e.target));
+			}
 		</script>
 		<style>
 			body{
